--- a/css/myResume.css
+++ b/css/myResume.css
@@ -140,17 +140,23 @@ td:nth-of-type(even){
 	top: 0;
 	height: 100%;
 	width: 100%;
+	padding-top: 200px;
+}
+.skill h3{
+	text-align: center;
+	color: #2c3e50;
+	font-size: 30px;letter-spacing: 2px;
+	margin-bottom: 75px;
 }
 .skill canvas{
 	float: left;
-	margin: 700px 20px;
 	
-	background: #000000;
 	
 }
-.skll .skill_menu{
-	margin-top: 100px;
-}
-.skill ul li{
-	padding: 15px 10px;
+.col-md-3 a{
+	margin-bottom: 55px;
+	display: block;
+	text-align: center;
+	color: #E87E04;
+	font-size: 25px;
 }
